add PlayerEvents