@@ -4,20 +4,20 @@ import com.google.gson.Gson;
 import com.google.gson.GsonBuilder;
 import com.google.gson.JsonArray;
 import com.google.gson.JsonElement;
-import dev.architectury.event.events.common.PlayerEvent;
 import dev.architectury.platform.Platform;
 import net.minecraft.network.chat.Component;
 import net.minecraft.util.GsonHelper;
 import org.apache.hc.client5.http.classic.methods.HttpGet;
 import org.apache.hc.client5.http.impl.classic.CloseableHttpClient;
-import org.apache.hc.client5.http.impl.classic.CloseableHttpResponse;
 import org.apache.hc.client5.http.impl.classic.HttpClientBuilder;
+import org.apache.hc.core5.http.ClassicHttpResponse;
 import org.apache.hc.core5.http.io.entity.EntityUtils;
 import org.w3c.dom.Document;
 import org.w3c.dom.NodeList;
 import org.xml.sax.InputSource;
 import tocraft.craftedcore.CraftedCore;
 import tocraft.craftedcore.CraftedCoreConfig;
+import tocraft.craftedcore.event.common.PlayerEvents;
 
 import javax.xml.parsers.DocumentBuilder;
 import javax.xml.parsers.DocumentBuilderFactory;
@@ -29,13 +29,14 @@ import java.util.List;
 import java.util.Map;
 
 
+@SuppressWarnings("unused")
 public class VersionChecker {
     private static final Map<String, Version> CACHED_VERSION = new HashMap<>();
     private static final List<String> INVALID_VERSIONS = List.of("1.16.5", "1.18.2", "1.19.4", "1.20.1", "1.20.2", "1.20.4", "1.20.5");
 
     public static void registerMavenChecker(String modid, URL mavenURL, Component modName) {
         // notify player about outdated version
-        PlayerEvent.PLAYER_JOIN.register(player -> new Thread(() -> {
+        PlayerEvents.PLAYER_JOIN.register(player -> new Thread(() -> {
             if (CraftedCoreConfig.INSTANCE != null && CraftedCoreConfig.INSTANCE.enableVersionChecking) {
                 // get the actual mod version
                 Version localVersion = Version.parse(Platform.getMod(modid).getVersion());
@@ -64,7 +65,7 @@ public class VersionChecker {
                     }
                     List<Version> versions = new ArrayList<>(processVersionListWithDefaultLayout(remoteVersions, true, INVALID_VERSIONS));
                     if (!versions.isEmpty()) {
-                        newestVersion = versions.get(versions.size() - 1);
+                        newestVersion = versions.getLast();
                     }
                     CACHED_VERSION.put(modid, newestVersion);
                 }
@@ -83,7 +84,7 @@ public class VersionChecker {
 
     public static void registerGitHubChecker(String modid, String owner, String repo, boolean releasesInsteadOfTags, boolean useLastPartOfVersion, Component modName, List<String> invalidVersions) {
         // notify player about outdated version
-        PlayerEvent.PLAYER_JOIN.register(player -> new Thread(() -> {
+        PlayerEvents.PLAYER_JOIN.register(player -> new Thread(() -> {
             if (CraftedCoreConfig.INSTANCE != null && CraftedCoreConfig.INSTANCE.enableVersionChecking) {
                 // get the actual mod version
                 Version localVersion = Version.parse(Platform.getMod(modid).getVersion());
@@ -93,7 +94,7 @@ public class VersionChecker {
                     List<String> remoteVersions = getVersionsFromGitHub(owner, repo, releasesInsteadOfTags);
                     List<Version> versions = new ArrayList<>(processVersionListWithDefaultLayout(remoteVersions, useLastPartOfVersion, invalidVersions));
                     if (!versions.isEmpty()) {
-                        newestVersion = versions.get(versions.size() - 1);
+                        newestVersion = versions.getLast();
                     }
                     CACHED_VERSION.put(modid, newestVersion);
                 } else {
@@ -129,7 +130,7 @@ public class VersionChecker {
         try (CloseableHttpClient httpClient = HttpClientBuilder.create().build()) {
             HttpGet request = new HttpGet(url);
             request.addHeader("Accept", "application/vnd.github.v3+json");
-            CloseableHttpResponse result = httpClient.execute(request);
+            ClassicHttpResponse result = httpClient.execute(request, response -> response);
             String json = EntityUtils.toString(result.getEntity(), "UTF-8");
             JsonArray jsonArray = GsonHelper.fromJson(GSON, json, JsonArray.class);
             for (JsonElement jsonElement : jsonArray) {
